Fixed arrow overlap

--- a/index.css
+++ b/index.css
@@ -63,8 +63,6 @@ h2 {
     width: 38vw;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    height: 42vh;
-    max-height: 500px;
 }
 
 code {
